--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.27.10",
-    "del": "^7.0.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-sass": "^5.1.0",
+    "json-server": "^0.17.1",
     "sass": "^1.56.1"
   }
 }
